--- a/src/main/features/claim/views/amount.njk
+++ b/src/main/features/claim/views/amount.njk
@@ -10,12 +10,14 @@
       <form novalidate method="post">
         {{ csrfProtection(csrf) }}
 
-        <p>{{ t('Your claim could be for a single amount or might be made up of multiple items.') }}</p>
-        <div class="panel panel-border-wide">
-          <p>{{ t('Don’t include interest - we’ll ask you about this next.') }}</p>
+        <p>{{ t('Your claim could be for a single amount or made up of multiple items.') }}</p>
 
-          <p>{{ t('Don’t include your claim fee - we’ll add this for you.') }}</p>
-        </div>
+          <p>{{ t('Don’t include:') }}</p>
+          <ul class="list-bullet form-group">
+            <li>{{ t('interest - we’ll ask you about this next') }}</li>
+            <li>{{ t('your claim fee - we’ll add this for you') }}</li>
+          </ul>
+
         <div class="claim-amounts">
           <div id="claim-amount">
             <div>
