--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -75,7 +75,8 @@
     {{ offerRejectedForClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.OFFER_ACCEPTED %}
     {{ offerAcceptedForClaimantDashboard(claim) }}
-  {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
+  {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
+    or status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
     {{ offerSettlementReachedDashboard() }}
   {% endif %}
 {% endmacro %}
@@ -113,7 +114,8 @@
     {{ offerRejectedForDefendantDashboard() }}
     {% elif status === ClaimStatus.OFFER_ACCEPTED %}
     {{ offerAcceptedForDefendantDashboard() }}
-    {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
+    {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
+      or status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
     {{ offerSettlementReachedDashboard() }}
   {% endif %}
 {% endmacro %}
