--- a/src/main/views/contact-us.njk
+++ b/src/main/views/contact-us.njk
@@ -6,6 +6,7 @@
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
+       <p>{{ t('We‘re experiencing intermittent problems with our phone line. Email us if you can‘t get through.') }}</p>
       {{ supportWidget('Money Claims') }}
     </div>
   </div>
