--- a/src/main/features/claimant-response/views/confirmation.njk
+++ b/src/main/features/claimant-response/views/confirmation.njk
@@ -17,7 +17,7 @@
           {% elseif repaymentPlanOrigin === 'COURT' %}
             {{ t('You’ve signed a settlement agreement') }}
           {% elseif claim.countyCourtJudgmentIssuedAt %}
-            {{ t('County Court Judgment issued') }}
+            {{ t('County Court Judgment requested') }}
           {% endif %}
         </h1>
         <p class="reference-number">
@@ -27,11 +27,6 @@
         <p>
           <span class="bold">{{ confirmationDate | date }}</span>
         </p>
-        {% if claim.countyCourtJudgmentIssuedAt %}
-          <p class="receipt-download-container">
-            <a href="{{ ClaimantResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download judgment') }}</a> (PDF)
-          </p>
-        {% endif %}
       </div>
 
       <h2 class="heading-medium">{{ t('What happens next') }}</h2>
