ROC-4171 request CCJ (#918)
* Added CCJ link and content

* Add partial ability to request CCJ if full admit and havent paid in time

* added 'request CCJ' section (active by default for now)

* added correct CCJ link

* commented out a few lines breaking main page of the dashboard and removed double import

* fixed previously commented code taht was breaking the dashboard if response was null

* fixed visual format of ccj request link (now it doesn't go on new line)

* removed partial code of unbuilt feature

* built macro for claimant for settlement agreement signed by both parties

* fixed typo in function name

* fixed more typos in code of offerSettlementReachedForClaimant method

* added offerSettlementReachedForClaimant to caseHistory.njk so that it is linked with the other components

* added conditional statement on when to show the Request CCJ option

* showing 'Request CCJ' option when settlment breached (to be tested with pay_by_set_date

* fixed ccjGuard to allow eligibility for ccj when settlement breached

* added 'Tell us you've been paid' button

* removed changes out of scope of current story

--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -19,6 +19,7 @@
     {% set claimantName = claim.claimData.claimant.name %}
     {% set paymentIntention = claim.settlement.getLastOffer().paymentIntention %}
     {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
+    {% set ccjRequest = CCJPaths.paidAmountPage.evaluateUri({externalId:claim.externalId}) %}
 
     <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
 
@@ -28,22 +29,21 @@
     {% endif %}
 
     {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-      <p>{{ t('The agreement says you’ll repay {{ amount }} by {{ paymentDate}}.',
+      <p>{{ t('The agreement says you’ll repay {{ amount }} by {{ paymentDate }}.',
           { amount: amountToPay,
             paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date
           }
         )
         }}</p>
     {% elseif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS and paymentIntention.repaymentPlan is defined %}
-      {{
-        t('The agreement says you’ll repay {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
+      <p>{{ t('The agreement says you’ll repay {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
           {
             instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
             paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule | lower,
             firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
           }
         )
-      }}
+      }}</p>
     {% endif %}
 
     <p>
@@ -53,7 +53,7 @@
     <p>
       {{ _downloadAgreementLink(claim) }}
     </p>
-    
+
     <p>
       {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
       {{ t('if you need their payment details.') }}
@@ -61,6 +61,7 @@
     <p>
       {{ t('Make sure you get receipts for any payments.') }}
     </p>
+
   {% else %}
     <h2 class="heading-small">{{ t('Agreement signed') }}</h2>
     <p>
@@ -72,7 +73,70 @@
   {% endif %}
 {% endmacro %}
 
+{% macro offerSettlementReachedForClaimant(claim) %}
+
+  {% if claim.settlement.isThroughAdmissions() %}
+    {% set claimantName = claim.claimData.claimant.name %}
+    {% set paymentIntention = claim.settlement.getLastOffer().paymentIntention %}
+    {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
+    {% set ccjRequest = CCJPaths.paidAmountPage.evaluateUri({ externalId:claim.externalId }) %}
+
+    <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
+
+    {% set amountToPay = 'the full amount' %}
+    {% if claim.response.responseType === ResponseType.PART_ADMISSION.value %}
+      {% set amountToPay = claim.response.amount | numeral %}
+    {% endif %}
+
+    {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+      <p>{{ t('The agreement says the defendant will repay {{ amount }} by {{ paymentDate }}.',
+          { amount: amountToPay,
+            paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date
+          }
+        )
+        }}</p>
+    {% elseif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS and paymentIntention.repaymentPlan is defined %}
+      <p>{{ t('The agreement says the defendant will pay you in installments of {{ instalmentAmount }} {{ paymentSchedule }}, starting {{ firstPaymentDate }}.',
+        {
+          instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
+          paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule | lower,
+          firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
+        }
+      )
+      }}</p>
+    {% endif %}
+
+    <p> {{ t('The agreement explains what you can do if the defendant breaks the terms.') }} </p>
+    <p>
+      {{ _downloadAgreementLink(claim) }}
+    </p>
+
+    <p> {{ t('When you’ve been paid in full, you need to let us know.') }} </p>
+    <a href="{{ AppPaths.contactUsPage.uri }}" class="button button-secondary">Tell us you've been paid</a>
+    
+    {% if claim.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
+      <hr>
+      <p>
+      <h2 class="heading-small">{{ t('Request County Court Judgment') }}</h2>
+      {{ t('If the defendant doesn’t pay or breaks the terms of the settlement agreement, you can '
+      + internalLink('request a County Court Judgment. ', ccjRequest )) | safe }}
+      </p>
+
+    {% endif %}
+
+  {% else %}
+    <h2 class="heading-small">{{ t('Agreement signed') }}</h2>
+    <p>
+      {{ t('You’ve both signed a legal agreement. The claim is now settled.') }}
+    </p>
+    <p>
+      {{ _downloadAgreementLink(claim) }}
+    </p>
+  {% endif %}
+
+{% endmacro %}
+
 {% macro _downloadAgreementLink(claim) %}
-  <a
-    href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download the settlement agreement') }}</a> {{ t(' (PDF)') }}
+  <a href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">
+    {{ t('Download the settlement agreement') }}</a> {{ t(' (PDF)') }}
 {% endmacro %}
