--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -39,7 +39,8 @@ ccjRequestedForDefendantClaimDetails %}
   offerRejectedForDefendantClaimDetails %}
 {% from "./claimStatus/offerSettlement.njk" import
   offerSettlementReachedClaimDetails,
-  offerSettlementReachedForDefendant %}
+  offerSettlementReachedForDefendant,
+  offerSettlementReachedForClaimant %}
 
 {% macro caseHistoryForClaimantClaimDetails(claim, csrf) %}
   {% for state in claim.stateHistory %}
@@ -76,8 +77,9 @@ ccjRequestedForDefendantClaimDetails %}
         {{ offerRejectedForClaimantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.OFFER_ACCEPTED %}
         {{ offerAcceptedForClaimantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
-        {{ offerSettlementReachedClaimDetails(claim) }}
+      {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED 
+              or state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
+        {{ offerSettlementReachedForClaimant(claim) }}
       {% else %}
         <p>
           {{ caseStatusForClaimant(state.status, claim) }}
@@ -126,7 +128,8 @@ ccjRequestedForDefendantClaimDetails %}
         {{ offerRejectedForDefendantClaimDetails() }}
       {% elif state.status === ClaimStatus.OFFER_ACCEPTED %}
         {{ offerAcceptedForDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
+      {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED 
+              or state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
           {{ offerSettlementReachedForDefendant(claim) }}
       {% else %}
         <p>
