Add in breach new CCJ eligible criteria

--- a/src/main/views/macro/internalLink.njk
+++ b/src/main/views/macro/internalLink.njk
@@ -1,3 +1,2 @@
 {% macro internalLink(text, href) %}
-  <a href="{{ href }}">{{ text }}</a>
-{% endmacro %}
+  <a href="{{ href }}">{{ text }}</a>{% endmacro %}
