--- a/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimFullyAdmitted.njk
@@ -87,10 +87,11 @@
     <p> {{ t('You need to email {{ supportMail }} to let us know. Include the date you were paid.', { supportMail: supportEmailAddress }) }} </p>
     {% if claim.response.paymentIntention.isPastPaymentDeadline %}
       <h2 class="heading-small">{{ t('What to do if they haven’t paid') }}</h2>
-      <p> {{ t('If the defendant doesn’t pay you, you can request a County Court Judgment.') }} </p>
+      <p>{{ t('If the defendant doesn’t pay you, you can ' + internalLink('request a County Court Judgment', CCJPaths.paidAmountPage.evaluateUri({ externalId: claim.externalId }))
+          + '.') | safe }}</p>
     {% else %}
       <h2 class="heading-small">{{ t('What to do if they don’t pay') }}</h2>
-      <p> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', { paymentDate: paymentDate}) }} </p>
+      <p> {{ t('If the defendant has not paid you by {{ paymentDate }}, you can request a County Court Judgment.', { paymentDate: paymentDate }) }} </p>
     {% endif %}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
     <h2 class="heading-small">{{ t('The defendant’s response') }}</h2>
