Fixed courtOrderPaymentPlan error

--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -109,10 +109,12 @@
             }),
           bottomBorder = true, bold = true
         ) }}
-        {{ row(label = 'Completion date',
+        {% if courtOrderPaymentPlan %}
+          {{ row(label = 'Completion date',
           value = courtOrderPaymentPlan.calculateLastPaymentDate() | date,
           bottomBorder = true, bold = true
-        ) }}
+          ) }}
+        {% endif %}
       {% endif %}
 
       {{ tableEnd() }}
