Full admission by set date statuses

--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -25,7 +25,9 @@ ccjRequestedForDefendantClaimDetails %}
   claimPartAdmittedAlreadyPaidForClaimantClaimDetails%}
 
 {% from "./claimStatus/claimFullyAdmitted.njk" import
-  claimFullAdmissionForDefendantClaimDetails,
+  claimFullAdmissionForDefendantClaimDetails %}
+
+{% from "./claimStatus/claimFullAdmissionForClaimant.njk" import
   claimFullAdmissionForClaimantClaimDetails %}
 
 {% from "./claimStatus/offerSubmitted.njk" import
