--- a/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
@@ -2,6 +2,6 @@
   <a href="{{ ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download your response') }}</a>{{ t(' (PDF)') }}
 {% endmacro %}
 
-{% macro viewAndRespondOffer(claim) %}
-  <a href='{{ ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }) }}' class="button button-secondary">{{ t('View and respond to the offer') }}</a>
+{% macro viewAndRespondOffer(claim, text = 'View and respond to the offer') %}
+  <p><a href='{{ ClaimantResponsePaths.taskListPage.evaluateUri({ externalId: claim.externalId }) }}' class="button button-secondary">{{ t(text) }}</a></p>
 {% endmacro %}
