--- a/src/main/features/claimant-response/views/counter-offer-accepted.njk
+++ b/src/main/features/claimant-response/views/counter-offer-accepted.njk
@@ -10,25 +10,21 @@
       <form novalidate method="post">
         {{ csrfProtection(csrf) }}
 
-        {% if isCourtOrderPaymentPlanConvertedByDefendantFrequency %}
-          <p> {{ t('The court has accepted your repayment amount, but the frequency will be set by the defendant.
-          We’ve converted the {{ claimantAmount }} payment {{ claimantFrequency }} to
-          {{ courtOrderAmount }} {{ courtOrderFrequency }}.', {
-              claimantAmount: claimantPaymentPlan.instalmentAmount | numeral,
-              claimantFrequency: claimantPaymentPlan.frequency | renderFrequencyViewType | lower,
-              courtOrderAmount: courtOrderPaymentPlan.instalmentAmount | numeral,
-              courtOrderFrequency: courtOrderPaymentPlan.frequency | renderFrequencyViewType | lower
-            }) }}</p>
+        <p> {{ t('The court has accepted your repayment amount, but the frequency will be set by the defendant.
+        We’ve converted the {{ claimantAmount }} payment {{ claimantFrequency }} to
+        {{ courtOrderAmount }} {{ courtOrderFrequency }}.', {
+            claimantAmount: courtOrderPaymentPlan.instalmentAmount | numeral,
+            claimantFrequency: courtOrderPaymentPlan.frequency | renderFrequencyViewType | lower,
+            courtOrderAmount: courtOrderPaymentPlan.instalmentAmount | numeral,
+            courtOrderFrequency: courtOrderPaymentPlan.frequency | renderFrequencyViewType | lower
+          }) }}</p>
 
-          {{
-          repaymentPlanBlock(
-            heading = 'The court’s proposed repayment plan',
-            paymentPlan = courtOrderPaymentPlan
-          )
-          }}
-        {% else %}
-          <p> {{ t('The court has accepted your repayment plan.') }} </p>
-        {% endif %}
+        {{
+        repaymentPlanBlock(
+          heading = 'The court’s proposed repayment plan',
+          paymentPlan = courtOrderPaymentPlan
+        )
+        }}
         {{ submitButton() }}
       </form>
     </div>
